--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "mongodb": "^4.7.0",
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "sharp": "^0.30.6",
     "styled-components": "^5.3.5",
     "swr": "^1.3.0"
   }
